
INTRODUCTION:

Commons SCXML 0.7 primarily contains new features, along with a
handful of bug fixes. See about section below for general information
on Commons SCXML.

IMPORTANT NOTES:

 o State IDs can no longer contain whitespace. Any IDs that contain spaces
   must be changed to conform before switching to v0.7.

NEW FEATURES:

 o Conflicts between transitions are now resolved based on document order
   of the transitions.

 o Transition targets can now be specified as a space separated list of
   state IDs. When more than one targets are specified, they must belong
   to regions of the same parallel.

DEPRECATIONS:

 o org.apache.commons.scxml.model.State#getTransitions()
   org.apache.commons.scxml.semantics.ErrorConstants#NON_DETERMINISTIC

 o org.apache.commons.scxml.model.Transition#getTarget()
   org.apache.commons.scxml.model.Transition#setTarget(TransitionTarget)
   org.apache.commons.scxml.model.Transition#getRuntimeTarget()
   org.apache.commons.scxml.model.Transition#getPath()

 o org.apache.commons.scxml.io.SCXMLSerializer#serializeTarget(StringBuffer,Transition,String)

BUG FIXES:



OTHER CHANGES:

 o SCXMLExecutor logs state at a lower severity (changed from log level
   'info' to log level 'debug')

 o The LCA of two states belonging to sibling regions is now the enclosing
   Parallel, rather than the orthogonal State.

ABOUT COMMONS SCXML:

The Commons SCXML (State Chart XML) project provides a generic
state-machine based execution environment. It borrows most semantics
from its namesake Working Draft at the W3C. Anything that can be
represented as a UML state chart -- business process flows, view
navigation bits, interaction or dialog management, and many more -- can
leverage the Commons SCXML library. The library abstracts out the
environment interfaces, and can be used in numerous server-side and
client-side runtimes.

Please visit the website for project information and documentation:

http://jakarta.apache.org/commons/scxml/
